# X-lens

./: .gitignore  README.md  assistant.py  detect.py  facts.json  glasses.py  glassesv2.py  known_faces.pkl  memory.py  memory_agent.py  mic_test.py  notes.py  notes.txt  parse_timer.py  recognize.py  reminders.json  requirements.txt  stt_test.py  timer.py  timer_agent.py  voice.py
X-Lens-main/: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
X-Lens-main/app/: main.py
X-Lens-main/app/api/: middleware.py  router.py
X-Lens-main/app/api/endpoints/: analyze.py  ask.py  chat.py  health.py  index.py  knowledge.py  metrics.py  scrape.py
X-Lens-main/app/core/: config.py  dependencies.py  exceptions.py  logging_config.py
X-Lens-main/app/ml/: base_vlm.py  embedder.py  qwen_vlm.py
X-Lens-main/app/quality/: analyzer.py  metrics.py
X-Lens-main/app/rag/: chunker.py  cleaner.py  retriever.py  scraper.py  service.py  vector_store.py
X-Lens-main/app/services/: pipeline.py  request_router.py
X-Lens-main/app/utils/: image_utils.py  metrics_logger.py  timing.py
X-Lens-main/data/vector_store/: index.faiss  metadata.json
X-Lens-main/experiments/: ablation_quality_scoring.py  ablation_rag_threshold.py
X-Lens-main/prompts/: question_answering.txt  rag_augmented.txt  scene_description.txt
X-Lens-main/scripts/: build_college_index.py  download_models.py
X-Lens-main/tests/: conftest.py
X-Lens-main/tests/integration/: test_api.py
X-Lens-main/tests/unit/: test_chunker.py  test_image_quality.py
mic_test/: mic_test.ino
(+3 files in other folders)
